--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --bg-primary: #ffffff;
+  --text-primary: #000000;
+  --border-color: rgb(222, 222, 222);
+  --container-bg: #fbf8f8;
+}
+
+.dark {
+  --bg-primary: #111827;
+  --text-primary: #ffffff;
+  --border-color: #374151;
+  --container-bg: #181e2b;
+}
+
+body {
+  background-color: var(--bg-primary);
+  color: var(--text-primary);
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.container {
+  max-width: 1080px;
+  margin: 0 auto;
+  padding-top: 1rem;
+  background-color: var(--container-bg);
+  border-left: var(--border-color) 1px solid;
+  border-right: var(--border-color) 1px solid;
+}
