--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam molestias, temporibus quae nobis, officiis architecto a, reiciendis iste repellendus iusto placeat illo recusandae! Ab modi alias, ipsum et rerum provident.</p>
+<app-about></app-about>
+<app-projects></app-projects>
