--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div class="container mx-auto">
-  <div class=" ">
+
+  <div class="nav mx-auto">
     <app-navbar></app-navbar>
   </div>
+  <div class="container mx-auto">
   <div class="py-4">
     <router-outlet></router-outlet>
   </div>
+
 </div>
