--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
-
-  <div class="nav mx-auto">
+<div class="container mx-auto">
+  <div class="">
     <app-navbar></app-navbar>
   </div>
-  <div class="container mx-auto">
-  <div class="py-4">
+
+  <div class="my-10">
     <router-outlet></router-outlet>
   </div>
-
 </div>
