refactor: enhance layout and styling; implement smooth scrolling and theme persistence

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,8 +2,8 @@
   <!-- Profile Image -->
     <div class="container mx-auto flex justify-between items-center py-4 px-10 ">
     <div class="flex items-center space-x-4">
-      <span class="text-xl">
-        {{ getWeatherIcon() }}
+      <span class="text-base">
+       VietNam {{ getWeatherIcon() }}
       </span>
       <span class="text-gray-500 text-sm">
         {{ weatherData.main.temp | number:'1.0-1' }}°C
@@ -13,26 +13,25 @@
     <!-- Center Navigation Links -->
     <div class="flex items-center space-x-6 bg-gray-800 px-6 py-2 rounded-full">
       <a
-        routerLink="/about"
-        routerLinkActive="text-teal-500"
-        class="text-white hover:text-teal-500 transition duration-300"
-      >
+        routerLink="/"
+        (click)="scrollToSection('about')"
+        class="text-gray-200 hover:text-teal-500 transition duration-300 cursor-pointer"
+        [class.text-teal-500]="activeSection === 'about'"
+        >
         About
       </a>
       <a
         routerLink="/articles"
         routerLinkActive="text-teal-500"
-        class="text-white hover:text-teal-500 transition duration-300"
+        class="text-gray-200 hover:text-teal-500 transition duration-300"
       >
         Articles
       </a>
-      <a
-        routerLink="/projects"
-        routerLinkActive="text-teal-500"
-        class="text-white hover:text-teal-500 transition duration-300"
-      >
-        Projects
-      </a>
+      <a (click)="scrollToSection('projects')" 
+   class="text-gray-200 hover:text-teal-500 transition duration-300 cursor-pointer"
+   [class.text-teal-500]="activeSection === 'projects'">
+   Projects
+</a>
       
     </div>
   
