--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,5 @@
-    <div class="max-w-3xl p-8">
+
+    <div class="max-w-3xl p-8 " id="about">
         <!-- Profile Image -->
         <div class="mb-4">
             <img src="assets/avatar.png" alt="Profile Picture" class="w-24 h-24 object-cover rounded-full">
