--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
   --container-bg: #fbf8f8;
 }
 
+
 .dark {
   --bg-primary: #111827;
   --text-primary: #ffffff;
@@ -35,3 +36,8 @@ body {
 h1, h2 , h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 70px;
+}
+
