--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,1 +1,13 @@
-<p>skills works!</p>
+<section class=" py-16">
+  <div class="container mx-auto px-10">
+    <h2 class="text-3xl font-bold text-gray-800 mb-12 ">Skills</h2>
+    
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
+      <div *ngFor="let skill of skills" 
+           class="flex items-center justify-center gap-2 p-4 bg-[#ffffff] rounded-md border border-transparent hover:border-gray-300 transition-all duration-300">
+        <img [src]="skill.icon" [alt]="skill.name" class="w-8 h-8 object-contain">
+        <span class="text-gray-800 text-sm">{{ skill.name }}</span>
+      </div>
+    </div>
+  </div>
+</section>
