feat: update social links in about component; enhance footer layout and styling; improve project card design and update project details in JSON

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -17,13 +17,13 @@
         
         <!-- Social Links -->
         <div class="flex space-x-6">
-            <a href="https://twitter.com" target="_blank" class="text-gray-500 hover:text-teal-500 transition-colors duration-300">
+            <a href="https://x.com/ThanVanHuy25640" target="_blank" class="text-gray-500 hover:text-teal-500 transition-colors duration-300">
                 <i class="fab fa-twitter text-2xl"></i>
             </a>
             <a href="https://github.com/Vanhuyne" target="_blank" class="text-gray-500 hover:text-teal-500 transition-colors duration-300">
                 <i class="fab fa-github text-2xl"></i>
             </a>
-            <a href="https://linkedin.com" target="_blank" class="text-gray-500 hover:text-teal-500 transition-colors duration-300">
+            <a href="https://www.linkedin.com/in/v%C4%83n-huy-0845161a1/" target="_blank" class="text-gray-500 hover:text-teal-500 transition-colors duration-300">
                 <i class="fab fa-linkedin text-2xl"></i>
             </a>
         </div>
