--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
-  <div class="">
+  <!-- <div class="">
     <app-navbar></app-navbar>
   </div>
 
@@ -8,5 +8,7 @@
   </div>
   <div>
     <app-footer></app-footer>
-  </div>
+  </div> -->
+  
+  <app-twitter-profile></app-twitter-profile>
 </div>
