--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,7 +8,6 @@
   --border-color: rgb(222, 222, 222);
   --container-bg: rgb(255, 255, 255);
 }
-
 
 .dark {
   --bg-primary: #111827;
@@ -23,6 +21,7 @@ body {
   color: var(--text-primary);
   transition: background-color 0.3s ease, color 0.3s ease;
   font-family: 'Inter', sans-serif;
+  font-size: 14px; /* Set font size for the entire project */
 }
 
 .container {
@@ -33,9 +32,11 @@ body {
   border-left: var(--border-color) 1px solid;
   border-right: var(--border-color) 1px solid;
 }
-h1, h2 , h3, h4, h5, h6 {
+
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Poppins', sans-serif;
 }
+
 html {
   scroll-behavior: smooth;
   scroll-padding-top: 70px;
