--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,8 @@
-<div class="container mx-auto">
-  <!-- <div class="">
+<div class="flex container mx-auto my-10">
+  <div class="w-4/12">
     <app-navbar></app-navbar>
   </div>
-
-  <div class="my-10">
+  <div class="w-9/12 ">
     <router-outlet></router-outlet>
   </div>
-  <div>
-    <app-footer></app-footer>
-  </div> -->
-  
-  <app-twitter-profile></app-twitter-profile>
 </div>
