--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,4 @@
-<app-about></app-about>
-<app-projects></app-projects>
+<!-- <app-about></app-about>
+<app-projects></app-projects> -->
+
+<app-twitter-profile></app-twitter-profile>
