feat: update layout and styling; adjust container width, refine navbar and Twitter profile components, and enhance skills section presentation

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="fixed px-2 w-3/12 h-full flex flex-col items-start justify-between">
+<nav class="fixed px-2  h-full flex flex-col items-start justify-between">
   <!-- Top Section: Logo/Profile Image -->
-  <div class=" ps-2">
+  <div class="ps-2">
     <img src="assets/img-icons/x.jpg" alt="Logo" class="w-10 h-10">
   </div>
 
@@ -36,7 +36,7 @@
   </div>
   <div class="ms-2 py-2">
     <button 
-      class=" text-base w-56 rounded-3xl py-3 px-6 text-white bg-black hover:bg-gray-500 text-center transition duration-300 cursor-pointer ">
+      class=" text-base w-52 rounded-3xl py-3 px-6 text-white bg-black hover:bg-gray-500 text-center transition duration-300 cursor-pointer ">
       More
     </button>
   </div>
@@ -45,14 +45,14 @@
   </div>
 
   <!-- Bottom Section: profile  -->
-  <div class="flex flex-col items-center space-y-2 pl-2 mb-6 ">
+  <div class="flex flex-col items-center space-y-2 pl-2 mb-2">
     <div class="flex items-center ">
       <img src="assets/avatar.png" class="w-10 h-10 object-cover rounded-full mr-2" alt="Avatar" />
       <div class="flex flex-col items-start">
         <span class="text-gray-800 text-sx">Van Huy</span>
         <span class="text-gray-400 text-sx">ThanVanHuy25640</span>
       </div>
-      <div class="ml-8"><i class="fa-solid fa-ellipsis"></i></div>
+      <div class="ml-7"><i class="fa-solid fa-ellipsis"></i></div>
     </div>
 
   </div>
