--- a/src/app/components/twitter-profile/twitter-profile.component.html
+++ b/src/app/components/twitter-profile/twitter-profile.component.html
@@ -1,8 +1,8 @@
-<div class="border-l border-r">
+<div class="border-l border-r ">
   <div class="px-6 flex items-center gap-6">
     <i class="fa-solid fa-arrow-left"></i>
     <div>
-      <h5 class="font-bold text-sm">Van Huy</h5>
+      <h5 class="font-bold text-sm pt-2">Van Huy</h5>
       <span class="text-gray-400 text-sm">3 posts</span>
     </div>
   </div>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="pt-16">
-      <h1 class="font-bold flex items-center text-sm">
+      <h1 class="font-bold flex items-center text-sm ">
         {{ profile.name }}
         <img src="assets/img-icons/tick-mark.png" alt="Verified" class="ml-2 w-4 h-4" />
       </h1>
