--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="flex container mx-auto my-10">
-  <div class="w-4/12">
+<div class="flex container mx-auto">
+  <div class="w-3/12">
     <app-navbar></app-navbar>
   </div>
   <div class="w-9/12 ">
