--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,13 +1,14 @@
-<section class=" py-16">
-  <div class="container mx-auto px-10">
-    <h2 class="text-3xl font-bold text-gray-800 mb-12 ">Skills</h2>
-    
-    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
+<section class="border-l border-r">
+  <div class="px-10 h-full py-5 ">
+    <h2 class="text-2xl font-bold text-gray-800 mb-12 px-6">Skills</h2>
+    <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6">
       <div *ngFor="let skill of skills" 
-           class="flex items-center justify-center gap-2 p-4 bg-[#ffffff] rounded-md border border-transparent hover:border-gray-300 transition-all duration-300">
-        <img [src]="skill.icon" [alt]="skill.name" class="w-8 h-8 object-contain">
-        <span class="text-gray-800 text-sm">{{ skill.name }}</span>
+           class=" flex flex-col items-center justify-center gap-4 py-4 px-2  rounded-md border border-transparent hover:border-gray-500 transition-all duration-300">
+        <img [src]="skill.icon" [alt]="skill.name" class="w-10 h-10 object-contain">
+        <span class="text-gray-800 text-xs">{{ skill.name }}</span>
       </div>
     </div>
+    <div class="opacity-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique culpa quos dolorum vero magni nam aliquid, saepe quia, dicta neque illo officiis facilis? Enim assumenda totam voluptate distinctio fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam est totam molestias atque, provident aut impedit accusamus pariatur architecto maiores placeat, sapiente eligendi quis minus nam quod autem.</div>
   </div>
+  
 </section>
