--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,60 +1,45 @@
-<div id="projects">
-  <hr class="my-4 mt-10 opacity-0">
-</div>
-<div class="px-8 pb-4">
+<div class="px-8 pb-4 py-5 border-l border-r h-full flex flex-col projects">
   <div class="flex items-center py-4">
     <hr class="flex-grow max-w-10 border-gray-500 mr-4 w-3">
     <span class="text-gray-500 text-sm">PROJECTS</span>
   </div>
-
   <!-- Project List -->
-  <div class="space-y-6">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+  <div class=" flex-grow">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 ">
       <!-- Project Card -->
-      <div 
-        *ngFor="let project of projects" 
-        class="border rounded-md p-4 
+      <div *ngFor="let project of projects" class="border rounded-md p-2 
                transition duration-300 hover:border-gray-500  
-               hover:cursor-pointer group relative"
-        (click)="openProject(project.githubLink)">
-        
+               hover:cursor-pointer group relative h-full" (click)="openProject(project.githubLink)">
         <!-- Internal Grid for Card Content -->
-        <div class="grid grid-cols-12 gap-6">
+        <div class="grid grid-cols-12 gap-6 h-full">
           <!-- Project Image/Placeholder (3 columns) -->
           <div class="col-span-3 hidden md:block">
-            <div  class="w-full aspect-square  rounded-md p-2
+            <div class="w-full aspect-square rounded-md p-2
                         flex items-center justify-center text-gray-400">
               <img class="w-full h-full object-cover border border-gray-200" src="{{ project.imageUrl }}" alt="">
             </div>
           </div>
-
-
-
-  
           <!-- Project Details (9 columns) -->
-          <div class="col-span-12 md:col-span-9">
+          <div class="col-span-12 md:col-span-9 flex flex-col">
             <!-- Project Title -->
             <h3 class="text-lg font-semibold text-gray-400 mb-2">
               {{ project.title }}
             </h3>
-  
             <!-- Project Description -->
-            <p class="text-gray-400 text-xs mb-4">
+            <p class="text-gray-400 text-xs mb-2 flex-grow">
               {{ project.description }}
             </p>
-  
-              <!-- View Project Label -->
-        <span class="absolute top-6 right-6 text-sm text-gray-400 
+            <!-- View Project Label -->
+            <span class="absolute top-3 right-6 text-sm text-gray-400 
                      opacity-0 group-hover:opacity-100 
                      group-hover:text-teal-500 
                      transition-all duration-300">
-          
-          <i class="fas fa-arrow-right ml-2 rotate-[-45deg] inline-block"></i>
-        </span>
-            
+              <i class="fas fa-arrow-right ml-2 rotate-[-45deg] inline-block"></i>
+            </span>
           </div>
         </div>
       </div>
     </div>
-    </div>
   </div>
+
+</div>
