--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,6 +1,9 @@
 <section class="border-l border-r">
   <div class="px-10 h-full py-5 ">
-    <h2 class="text-2xl font-bold text-gray-800 mb-12 px-6">Skills</h2>
+    <div class="flex items-center py-4">
+      <hr class="flex-grow max-w-10 border-gray-500 mr-4 w-3">
+      <span class="text-gray-500 text-sm">SKILLS</span>
+    </div>
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-6">
       <div *ngFor="let skill of skills" 
            class=" flex flex-col items-center justify-center gap-4 py-4 px-2  rounded-md border border-transparent hover:border-gray-500 transition-all duration-300">
