--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,6 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+<div class="fixed  top-0 w-3/12 px-6 py-2"> <!-- New element positioned with Tailwind CSS -->
+  <app-weather></app-weather>
+</div>
