feat: add resume component with PDF viewer and update routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="flex container mx-auto">
-  <div class="w-3/12">
+<div class="flex container mx-auto"> <!-- New element positioned with Tailwind CSS -->
+  <div class="w-3/12 h-screen">
     <app-navbar></app-navbar>
   </div>
   <div class="w-9/12 ">
