--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="px-8 pb-4 py-5 border-l border-r  flex flex-col contact">
+<div class="px-8 pb-4 py-5 flex flex-col contact">
   <div class="flex items-center py-4">
     <hr class="flex-grow max-w-10 border-gray-500 mr-4 w-3">
     <span class="text-gray-500 text-sm">CONTACT</span>
