--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,26 +1,26 @@
-<div class="px-8 pb-4 py-5 border-l border-r h-full flex flex-col projects">
+<div class="px-8 pb-4 py-5 flex flex-col projects">
   <div class="flex items-center py-4">
     <hr class="flex-grow max-w-10 border-gray-500 mr-4 w-3">
     <span class="text-gray-500 text-sm">PROJECTS</span>
   </div>
   <!-- Project List -->
-  <div class=" flex-grow">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 ">
+  <div class="flex-grow">
+    <div class="flex flex-col gap-6" >
       <!-- Project Card -->
-      <div *ngFor="let project of projects" class="border rounded-md p-2 
+      <div *ngFor="let project of projects" class="border  border-gray-300 rounded-md p-2 
                transition duration-300 hover:border-gray-500  
-               hover:cursor-pointer group relative h-full" (click)="openProject(project.githubLink)">
-        <!-- Internal Grid for Card Content -->
-        <div class="grid grid-cols-12 gap-6 h-full">
-          <!-- Project Image/Placeholder (3 columns) -->
-          <div class="col-span-3 hidden md:block">
-            <div class="w-full aspect-square rounded-md p-2
+               hover:cursor-pointer group relative w-full" (click)="openProject(project.githubLink)">
+        <!-- Internal Flex for Card Content -->
+        <div class="flex flex-col md:flex-row gap-6 h-full">
+          <!-- Project Image/Placeholder -->
+          <div class="">
+            <div class="w-24 h-24 rounded-md p-2
                         flex items-center justify-center text-gray-400">
               <img class="w-full h-full object-cover border border-gray-200" src="{{ project.imageUrl }}" alt="">
             </div>
           </div>
-          <!-- Project Details (9 columns) -->
-          <div class="col-span-12 md:col-span-9 flex flex-col">
+          <!-- Project Details -->
+          <div class="flex-grow flex flex-col">
             <!-- Project Title -->
             <h3 class="text-lg font-semibold text-gray-400 mb-2">
               {{ project.title }}
@@ -41,5 +41,4 @@
       </div>
     </div>
   </div>
-
 </div>
