--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,5 +1,5 @@
-<section class="border-l border-r">
-  <div class="px-10 h-full py-5 ">
+<section class=" ">
+  <div class="px-10  py-5 ">
     <div class="flex items-center py-4">
       <hr class="flex-grow max-w-10 border-gray-500 mr-4 w-3">
       <span class="text-gray-500 text-sm">SKILLS</span>
@@ -11,7 +11,7 @@
         <span class="text-gray-800 text-xs">{{ skill.name }}</span>
       </div>
     </div>
-    <div class="opacity-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique culpa quos dolorum vero magni nam aliquid, saepe quia, dicta neque illo officiis facilis? Enim assumenda totam voluptate distinctio fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam est totam molestias atque, provident aut impedit accusamus pariatur architecto maiores placeat, sapiente eligendi quis minus nam quod autem.</div>
+    <!-- <div class="opacity-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto similique culpa quos dolorum vero magni nam aliquid, saepe quia, dicta neque illo officiis facilis? Enim assumenda totam voluptate distinctio fugit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam est totam molestias atque, provident aut impedit accusamus pariatur architecto maiores placeat, sapiente eligendi quis minus nam quod autem.</div> -->
   </div>
 
 </section>
