--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="fixed px-2  h-full flex flex-col items-start justify-between">
+<nav class="fixed px-3  h-full flex flex-col items-start justify-between border-l border-r ">
   <!-- Top Section: Logo/Profile Image -->
   <div class="ps-2">
     <img src="assets/img-icons/x.jpg" alt="Logo" class="w-10 h-10">
@@ -29,12 +29,12 @@
       <i class="fas fa-envelope text-xl mr-5"></i> Message
     </a>
 
-    <a [routerLink]="'/communities'" [ngClass]="{'active-link': isActive('/communities')}"
+    <a [routerLink]="'/resume'" [ngClass]="{'active-link': isActive('/communities')}"
       class="text-gray-800 px-4 py-2 transition duration-300 cursor-pointer flex items-center rounded-3xl   hover:bg-gray-300">
-      <i class="fa-solid fa-user-group text-xl mr-5"></i> Communities
+      <i class="fa-solid fa-user-group text-xl mr-5"></i> Resume
     </a>
   </div>
-  <div class="ms-2 py-2">
+  <div class=" py-2">
     <button 
       class=" text-base w-52 rounded-3xl py-3 px-6 text-white bg-black hover:bg-gray-500 text-center transition duration-300 cursor-pointer ">
       More
@@ -45,7 +45,7 @@
   </div>
 
   <!-- Bottom Section: profile  -->
-  <div class="flex flex-col items-center space-y-2 pl-2 mb-2">
+  <!-- <div class="flex flex-col items-center space-y-2 pl-2 mb-2">
     <div class="flex items-center ">
       <img [src]="profileData?.profileImage || 'assets/avatar.png'" class="w-10 h-10 object-cover rounded-full mr-2" alt="Avatar" />
       <div class="flex flex-col items-start">
@@ -54,6 +54,6 @@
       </div>
       <div class="ml-4"><i class="fa-solid fa-ellipsis"></i></div>
     </div>
-  </div>
+  </div> -->
 </nav>
 <!-- Bottom Section: Profile Details -->
