--- a/src/app/components/twitter-profile/twitter-profile.component.html
+++ b/src/app/components/twitter-profile/twitter-profile.component.html
@@ -1,5 +1,5 @@
-<div class="border-l border-r ">
-  <div class="px-6 flex items-center gap-6">
+
+  <div class="px-6 flex items-center gap-6 ">
     <i class="fa-solid fa-arrow-left"></i>
     <div>
       <h5 class="font-bold text-sm pt-2">Van Huy</h5>
@@ -80,7 +80,9 @@
       </div>
       <div class="ml-12 text-sm ">
         <p>{{ tweet.text }}</p>
-        <iframe *ngIf="tweet.gif" [src]="tweet.gif" width="600" height="360" frameborder="0" class="giphy-embed mt-2 rounded-lg" allowfullscreen></iframe>
+        <div style="width: 550px; height: 300px; padding-top: 10px;">
+          <iframe [src]="tweet.gif" style="width: 100%; height: 100%; border: none;"></iframe>
+      </div> 
         <div class="grid grid-cols-5 text-gray-500 mt-4 gap-4">
           <button class="flex items-center space-x-1 ">
         <i class="fa-regular fa-comment"></i><span>{{tweet.comments}}</span>
@@ -101,5 +103,4 @@
       </div>
     </div>
   </div>
-</div>
 
